1.9.2
---
- Fix logic failure in gapless code: The trailing silence was only cut on the first decode. So, seek-back and decode again never was gapless:-(
- Fix linker flags on MacOS 10.6 .
- Improve portability (mainly for Solaris/x86, possibly others).

1.9.1
---
- Fix OpenAL output issue (bug 2840085)
- Fix theoretically possible discarding of some audio samples when getting a new format.
- Fix unwanted verboseness (some error messages from library even when MPG123_QUIET was specified).
- Fix back-to-beginning for feed_skip (fixes bug 2859531).
- Fix the CPU creep bug with NtoM decoding.
  That one has been nasty on you with large files since bad frame fillup has been introduced.
- Fix regression (since 1.9.0) in ID3 parsing: Now Foobar2000 RVA fields are interpreted again (among others).
- Fix some compiler warnings, minor cleanup.

1.9.0
---

- Free format support.
- ARM assembly optimizations (yay Taihei again!).
- Dither noise now runtime-generated, thus less bloated binary (thanks Taihei...).
  This means that dithered decoding is now included per default.
  Please note that work is ongoing to improve the dithering quality, more to come.
  For example: Accurate rounding to 16bits is now always used for generic dithered decoder, there are plans to adapt the noise for different sampling frequencies.
- Buffer plays any audio type now.
- New output module: OpenAL
- Bug fixes:
  - Broken frame fillup for non-signed 8 bit formats with correct zero (bug 2805665)
  - Crash on invalid UTF-16 in ID3 tags fixed (thanks to Andy Hefner)
  - Bad detection of separated UTF-16 strings in ID3 tags (bug 2834636).
- Topic ID3 and UTF: Now we are more tolerant with UTF16, even accepting those broken tags that id3v2 produces (multiple conflicing BOMs).
- Build system allows AltiVec on non-Macs now (don't enforce unsupported gcc flags).
- Terminal control mode is more verbose (gives hint about pressing 'h').